Fixed Alignment Issue

--- a/index.css
+++ b/index.css
@@ -9,11 +9,21 @@
     .container {
       width: 100%;
     }
+    .flex_1
+    {
+        
+        flex-direction: column;
+    }
   }
   
   @media (min-width: 601px) {
     .container {
       width: 80%;
+    }
+    .flex_1
+    {
+      
+        flex-direction: row;
     }
   }
   
@@ -54,6 +64,16 @@ h1
     height: 120px;
     justify-content: center;
     align-items: center;
+    column-gap: 3rem;
+
+}
+.flex_1
+{
+    margin-top: 0.5rem;
+    height: 120px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
     column-gap: 3rem;
 
 }
